# dice-bot-rs

./: Cargo.toml
src/: dice.rs  earthdawn.rs  eote.rs  global_gen.rs  lib.rs  main.rs  ranges.rs  shadowrun.rs
