[package]
name = "dice-bot"
version = "0.6.0-alpha1"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/dice-bot-rs"
readme = "README.md"
keywords = ["discord","dice"]
description = "A discord bot to roll RPG dice rolls."
license = "ZLIB"
publish = false
edition = "2018"

[dependencies]
serenity = "0.8.0"
#For local Serenity hacking
#serenity = { version = "^0", path = "../serenity"}
randomize = "3.0.1"
getrandom = "0.1.14"
lokacore = "0.3.0"
lazy_static = "1.4.0"
regex = "1"

[profile.release]
lto = true
codegen-units = 1
