[package]
name = "dice-bot"
version = "0.6.0-coorbin"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/dice-bot-rs"
readme = "README.md"
keywords = ["discord","dice"]
description = "A discord bot to roll RPG dice rolls."
license = "ZLIB"
publish = false
edition = "2018"

[dependencies]
serenity = "0.8"
#For local Serenity hacking
#serenity = { version = "^0", path = "../serenity"}
randomize = "3.0"
getrandom = "0.2"
lokacore = "0.3"
lazy_static = "1.4"
regex = "1"
bytemuck = "1.4"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "dicebot"
path = "src/main.rs"