[package]
name = "dice-bot"
version = "0.6.1-coorbin"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/dice-bot-rs"
readme = "README.md"
keywords = ["discord","dice"]
description = "A discord bot to roll RPG dice rolls."
license = "ZLIB"
publish = false
edition = "2018"

[dependencies]
serenity = "0"
#For local Serenity hacking
#serenity = { version = "^0", path = "../serenity"}
rand = "0"
getrandom = "0"
lokacore = "0"
lazy_static = "1"
regex = "1"
bytemuck = "1"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "dicebot"
path = "src/main.rs"